--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi sitio</title>
+  <title>Mi mundo</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Bienvenido</h1>
-  <p>Este es mi primer sitio web.</p>
+
+  <header>
+    <h1>Mi sitio</h1>
+    <p>Historias, ideas y caos controlado</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>Sobre mí</h2>
+      <p>Aquí empieza algo. No sé qué será, pero será mío.</p>
+    </section>
+
+    <section>
+      <h2>Contenido</h2>
+      <p>Pronto habrá historias, proyectos y cosas raras.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2026 - Hecho con poco dinero y demasiada voluntad</p>
+  </footer>
+
 </body>
 </html>
