--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Mi mundo</title>
   <link rel="stylesheet" href="style.css">
+  <button>Obedecer</button>
 </head>
 <body>
 
